
[*] Sat May 11 2002 - netcat (cvs)

  o Now netcat_socket_accept() recognizes a negative timeout parameter.
  o Splitted core functions like readwrite() to core.c, this allows a
    more modular programming and allows a better features-implementation.
  o Moved some low level code from main.c to core.c
  o Added UDP protocol support, but it is a little buggy still, because
    I have some logistic problems to resolve before fixing the
    implementation.
  o Fixed various socket leaks.
  o Reimplemented command line switch `-z' for TCP protocol.
  o Handled the listen mode-zero I/O case situation.
  o Port ranges now are recognized even in the form min:max
  o Rewritten telnet support.  Now we have a more reliable implementation
    of the RFC0854.  Netcat will also rewrite the incoming buffer with
    the telnet codes stripped.
  o Updated doc/migration with new uncompatibilities found.
  o Added configure option `--enable-oldtelnet', which restores the old
    nc110 telnet codes parsing policy.
  o Added configure option `--enable-compat', which turnes on ALL the
    other backword compatibility switches.
  o Now it is possible to specify port ranges both in the form min-max and
    in the form min:max.


[*] Thu May  9 2002 - netcat v0.3.1

  o Now "make install" also symlinks "nc" to the program file "netcat".
  o More careful use of stderr/stdout for printing messages
  o Updated file doc/migration
  o Now it is possible to force the local source port when connecting to
    somewhere using the -p option (this is not yet possible in tunnel
    mode).
  o Fixed some output messages in netcat.c


[*] Mon May  6 2002 - netcat v0.3.0

  o Fixed netcat_resolvehost() to be more library function.
  o Added function netcat_socket_new() to network.c
  o Added functions netcat_socket_new_listen() and netcat_socket_accept()
    to network.c
  o configure now checks for important gettext external data.
  o Updated files INSTALL and COPYING